# clay-rs-wgpu-demo

./: Cargo.toml  LICENSE  README.md
src/: main.rs  windowing.rs
src/graphics/: depth_texture.rs  graphics_context.rs  mod.rs
src/ui/: mod.rs  ui_layout.rs  ui_pipeline.rs  ui_renderer.rs
