[package]
name = "clay-rs-wgpu-demo"
version = "0.1.0"
edition = "2021"

[profile.release]
lto = "fat"
codegen-units = 1

[build]
rustflags = ["-C", "target-cpu=native"]

[dependencies]
winit = "0.30.9"
wgpu = "24.0.1"
env_logger = "0.9"
log = "0.4"
pollster = "0.2"
image = "0.25.5"
bytemuck = { version = "1.16", features = [ "derive" ] }
glyphon = "0.8.0"
clay-layout = {path = "../clay" }
